# YOLOE-Voxeland

./: .gitignore  README.md  requirements.txt
src/: download_yoloe.py  yoloe_inference.py  yoloe_main.py  yoloe_ros2.py  yoloe_ros2_main.py
src/yoloe_ros2/: package.xml  setup.cfg  setup.py
src/yoloe_ros2/yoloe_ros2/: __init__.py  config.json  download_yoloe.py  yoloe_inference.py  yoloe_main.py  yoloe_ros2_main.py  yoloe_ros2_node.py
src/yoloe_ros2/yoloe_ros2/input_images/: README.md
