<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yoloe_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 package for YOLOE</description>
  <maintainer email="macorisd@gmail.com">Macorís Decena Giménez</maintainer>
  <license>MIT</license>

  <build_depend>rclpy</build_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
